@@ -67,7 +67,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -126,6 +126,13 @@
        </property>
        <property name="text">
         <string>Save Preset</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="updatePresetButton">
+       <property name="text">
+        <string>&amp;Update Preset</string>
        </property>
       </widget>
      </item>
@@ -332,7 +339,7 @@ Most people can leave this option enabled as it ensures copying to media devices
       <item>
        <layout class="QHBoxLayout">
         <item>
-	  <widget class="QPushButton" name="previewButton">
+         <widget class="QPushButton" name="previewButton">
           <property name="text">
            <string>Preview</string>
           </property>
