@@ -1,0 +1,5 @@
+install( FILES amarok.upd DESTINATION ${KCONF_UPDATE_INSTALL_DIR} )
+install( PROGRAMS
+         amarok-2.4.1-tokens_syntax_update.pl
+         DESTINATION ${KCONF_UPDATE_INSTALL_DIR}
+       )
